[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlrose_ky"
version = "1.0.0"
description = "MLROSe-ky: Machine Learning, Randomized Optimization and Search"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Kyle Nakamura", email = "knakamura13dev@gmail.com"},
    {name = "Genevieve Hayes"},
    {name = "Andrew Rollings"}
]
maintainers = [
    {name = "Kyle Nakamura", email = "knakamura13dev@gmail.com"}
]
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "joblib",
    "networkx",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy"
]
keywords = [
    "machine learning",
    "randomized optimization",
    "search algorithms",
    "neural networks",
    "genetic algorithm",
    "simulated annealing",
    "hill climbing",
    "MIMIC",
    "Python",
    "OMSCS",
    "CS",
    "7641",
    "mlrose-hiive"
]
[project.urls]
"Homepage" = "https://github.com/knakamura13/mlrose-ky"
"Documentation" = "https://nkapila6.github.io/mlrose-ky/"

[tool.black]
line-length = 140
target-version = ['py310', 'py311', 'py312']
skip_magic_trailing_comma = true

[tool.setuptools.packages.find]
where = ["mlrose_ky"]
